feat: set default accent color to blue
This commit changes the default accent color to blue for both light and dark themes. The previous default was a dark gray for the light theme and green for the dark theme. This change aligns the default accent color with the blue option in the accent selector, providing a more consistent user experience.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       --muted: #6b7280;
       --card: #ffffff;
       --border: #e5e7eb;
-      --accent: #111827;
+      --accent: #3b82f6;
       --header-bg: rgba(255, 255, 255, 0.75);
     }
 
@@ -30,7 +30,7 @@
       --muted: #a3a3a3;
       --card: #111214;
       --border: #1f2937;
-      --accent: #22c55e;
+      --accent: #3b82f6;
       --header-bg: rgba(13, 13, 14, 0.65);
     }
 
@@ -132,7 +132,7 @@
           Software Engineer - Backend Specialist
         </p>
         <div class="mb-6 flex items-center justify-center gap-3 md:justify-start">
-          <a href="https://docs.google.com/document/d/1auYFZzNISplGjUTK-TpGDIf0FjUaMgvCQgigOXIIqUw/edit?usp=sharing"
+          <a href="https://docs.google.com/document/d/1auYFZzNISplGjUTK-TpGDIf0FjUaMgvCQgigOXIIqUw/export?format=pdf"
             target="_blank" rel="noopener noreferrer"
             class="inline-flex items-center gap-2 rounded-full border border-[var(--border)] px-4 py-2 text-sm font-medium hover:bg-black/5 dark:hover:bg-white/5">Download
             CV</a>
