feat: change profile picture to WebP
This commit replaces the PNG profile picture with a WebP version. This change improves performance by reducing the image file size without sacrificing quality. The `index.html` file has been updated to point to the new image.

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           <div
             class="absolute left-[8%] right-[8%] top-[8%] bottom-[0px] md:left-[10%] md:right-[10%] md:top-[10%] rounded-2xl bg-[var(--accent)]">
           </div>
-          <img src="img/pp.png" alt="Profile"
+          <img src="img/pp.webp" alt="Profile"
             class="absolute z-10 left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 h-full w-auto max-h-full object-contain shadow-none [filter:drop-shadow(0_12px_36px_rgba(0,0,0,0.35))]" />
         </div>
       </div>
