fix: use absolute URL for og:image
This commit changes the `og:image` path in the `index.html` file from a relative path to an absolute URL. This ensures that the image can be consistently found and displayed when the website is shared on social media platforms, regardless of the context in which the URL is shared.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="img/og-image.png" />
+  <meta property="og:image" content="https://irhamsahbana.github.io/img/og-img.png" />
 
   <title>Irham Sahbana — Software Engineer, Web Developer, Mentor</title>
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
