--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://irhamsahbana.github.io/img/og-img.png" />
 
-  <title>Irham Sahbana — Software Engineer, Web Developer, Mentor</title>
+  <title>Gilang Ramadhan — Junior Software Engineer, Web Developer, Mentor</title>
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -54,15 +54,15 @@
   <!-- Header -->
   <header id="site-header" class="fixed inset-x-0 top-0 z-50 bg-[var(--header-bg)] backdrop-blur transition-shadow">
     <nav class="mx-auto flex max-w-7xl items-center justify-between px-6 py-4">
-      <a href="#top" class="text-sm md:text-base font-semibold tracking-tight">Irham Sahbana</a>
+      <a href="#top" class="text-sm md:text-base font-semibold tracking-tight">Gilang Ramadhan</a>
 
       <div class="flex items-center gap-3">
         <ul class="hidden items-center gap-8 text-sm font-medium md:flex">
           <li><a class="hover:opacity-70" href="#about">About</a></li>
-          <li><a class="hover:opacity-70" href="#skills">Skills</a></li>
-          <li>
+          <!-- <li><a class="hover:opacity-70" href="#skills">Skills</a></li> -->
+          <!-- <li>
             <a class="hover:opacity-70" href="#experience">Experience</a>
-          </li>
+          </li> -->
           <li><a class="hover:opacity-70" href="#projects">Selected Projects</a></li>
           <li><a class="hover:opacity-70" href="#contact">Contact</a></li>
         </ul>
@@ -102,10 +102,10 @@
     <div id="mobile-menu" class="hidden border-t border-[var(--border)] bg-[var(--bg)] md:hidden">
       <ul class="mx-auto max-w-7xl px-6 py-3 text-sm font-medium">
         <li class="py-2"><a class="block" href="#about">About</a></li>
-        <li class="py-2"><a class="block" href="#skills">Skills</a></li>
+        <!-- <li class="py-2"><a class="block" href="#skills">Skills</a></li>
         <li class="py-2">
           <a class="block" href="#experience">Experience</a>
-        </li>
+        </li> -->
         <li class="py-2"><a class="block" href="#projects">Selected Projects</a></li>
         <li class="py-2"><a class="block" href="#contact">Contact</a></li>
       </ul>
@@ -120,7 +120,7 @@
           <div
             class="absolute left-[8%] right-[8%] top-[8%] bottom-[0px] md:left-[10%] md:right-[10%] md:top-[10%] rounded-2xl bg-[var(--accent)]">
           </div>
-          <img src="img/pp.webp" alt="Profile"
+          <img src="img/pp2.webp" alt="Profile"
             class="absolute z-10 left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 h-full w-auto max-h-full object-contain shadow-none [filter:drop-shadow(0_12px_36px_rgba(0,0,0,0.35))]" />
         </div>
       </div>
@@ -129,13 +129,13 @@
           Hello, I am
         </p>
         <h1 class="mb-2 text-3xl font-extrabold leading-tight md:text-5xl">
-          Irham Sahbana
+          Gilang Ramadhan
         </h1>
         <p class="mb-6 text-lg font-semibold text-[var(--muted)] md:text-xl">
-          Software Engineer - Backend Specialist
+          Junior iOS Developer
         </p>
         <div class="mb-6 flex items-center justify-center gap-3 md:justify-start">
-          <a href="https://docs.google.com/document/d/1auYFZzNISplGjUTK-TpGDIf0FjUaMgvCQgigOXIIqUw/export?format=pdf"
+          <a href="https://drive.google.com/file/d/1egc_DIyZYp38XlpfhObV83BHe7QbBIdU/view?usp=share_link"
             target="_blank" rel="noopener noreferrer"
             class="inline-flex items-center gap-2 rounded-full border border-[var(--border)] px-4 py-2 text-sm font-medium hover:bg-black/5 dark:hover:bg-white/5">Download
             CV</a>
@@ -144,7 +144,7 @@
             Info</a>
         </div>
         <div class="flex items-center justify-center gap-4 md:justify-start">
-          <a href="https://id.linkedin.com/in/irhamsahbana" aria-label="LinkedIn" target="_blank"
+          <a href="https://www.linkedin.com/in/gilang-rmdn/" aria-label="LinkedIn" target="_blank"
             rel="noopener noreferrer"
             class="inline-flex h-9 w-9 items-center justify-center rounded-full border border-[var(--border)] hover:bg-black/5 dark:hover:bg-white/5">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="h-5 w-5" fill="currentColor">
@@ -152,7 +152,7 @@
                 d="M4.98 3.5C4.98 4.88 3.86 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1s2.48 1.12 2.48 2.5ZM.5 8h4V24h-4V8Zm7 0h3.8v2.2h.1c.5-1 1.9-2.2 3.9-2.2 4.2 0 5 2.8 5 6.3V24h-4v-7.1c0-1.7 0-3.9-2.4-3.9s-2.8 1.8-2.8 3.8V24h-3.8V8Z" />
             </svg>
           </a>
-          <a href="https://github.com/irhamsahbana" aria-label="GitHub" target="_blank" rel="noopener noreferrer"
+          <a href="https://github.com/G1langRamadhan" aria-label="GitHub" target="_blank" rel="noopener noreferrer"
             class="inline-flex h-9 w-9 items-center justify-center rounded-full border border-[var(--border)] hover:bg-black/5 dark:hover:bg-white/5">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="h-5 w-5" fill="currentColor">
               <path fill-rule="evenodd"
@@ -172,13 +172,17 @@
       <div class="grid gap-6 md:grid-cols-3">
         <div class="rounded-2xl border border-[var(--border)] bg-[var(--card)] p-5">
           <p class="text-sm text-[var(--muted)]">Experience</p>
-          <p class="mt-1 text-xl font-semibold" id="experience-years">
-            3+ Years
+          <!-- <p class="mt-1 text-xl font-semibold" id="experience-years">
+            less than 1 year
+          </p> -->
+
+          <p class="mt-1 text-xl font-semibold">
+            1 year
           </p>
         </div>
         <div class="rounded-2xl border border-[var(--border)] bg-[var(--card)] p-5">
           <p class="text-sm text-[var(--muted)]">Completed</p>
-          <p class="mt-1 text-xl font-semibold">23+ Projects</p>
+          <p class="mt-1 text-xl font-semibold">4 Projects</p>
         </div>
         <div class="rounded-2xl border border-[var(--border)] bg-[var(--card)] p-5">
           <p class="text-sm text-[var(--muted)]">Location</p>
@@ -186,19 +190,17 @@
         </div>
         <div class="md:col-span-3">
           <p class="text-[var(--muted)] leading-relaxed">
-            A software engineer who focuses on web development, particularly
-            backend engineering. Able to effectively self-manage independent
-            projects as well as collaborate in a team setting.
+            Junior Software Engineer specializing in iOS app development with 1 year of hands-on experience. Skilled in Swift, SwiftUI and SwiftData, with the ability to self-manage independent projects and collaborate effectively within team environments.
           </p>
         </div>
       </div>
     </section>
 
     <!-- Skills -->
-    <section id="skills" class="mt-32">
+    <!-- <section id="skills" class="mt-32">
       <h2 class="mb-6 text-2xl font-bold">Skills</h2>
       <div class="grid gap-6 md:grid-cols-3">
-        <!-- Languages and Frameworks -->
+
         <div class="rounded-2xl border border-[var(--border)] bg-[var(--card)] p-6">
           <h3 class="mb-3 font-semibold">Languages and Frameworks</h3>
           <div class="relative group" data-skill-box data-skill-key="languages">
@@ -214,7 +216,6 @@
           </div>
         </div>
 
-        <!-- Tools -->
         <div class="rounded-2xl border border-[var(--border)] bg-[var(--card)] p-6">
           <h3 class="mb-3 font-semibold">Tools</h3>
           <div class="relative group" data-skill-box data-skill-key="tools">
@@ -230,7 +231,7 @@
           </div>
         </div>
 
-        <!-- Practices -->
+
         <div class="rounded-2xl border border-[var(--border)] bg-[var(--card)] p-6">
           <h3 class="mb-3 font-semibold">Practices</h3>
           <div class="relative group" data-skill-box data-skill-key="practices">
@@ -246,13 +247,13 @@
           </div>
         </div>
       </div>
-    </section>
+    </section>  -->
 
     <!-- Experience -->
-    <section id="experience" class="mt-32">
+    <!-- <section id="experience" class="mt-32">
       <h2 class="mb-6 text-2xl font-bold">Experiences</h2>
       <div id="experience-list" class="space-y-5"></div>
-    </section>
+    </section> -->
 
     <!-- Selected Projects -->
     <section id="projects" class="mt-32">
@@ -276,7 +277,7 @@
         <div class="flex flex-col items-start gap-4 md:flex-row md:items-center md:justify-between">
           <div>
             <p class="text-sm text-[var(--muted)]">Email</p>
-            <a href="mailto:business.irham@mail.com" class="font-medium">business.irham@gmail.com</a>
+            <a href="mailto:business.irham@mail.com" class="font-medium">gilangramadhan95627@gmail.com</a>
           </div>
           <div class="flex items-center gap-2">
             <a href="#" class="rounded-full border border-[var(--border)] px-3 py-1 text-sm">LinkedIn</a>
@@ -289,8 +290,8 @@
     <footer class="mt-24 border-t border-[var(--border)] py-8 text-center text-xs text-[var(--muted)]">
       <nav class="mb-3 flex justify-center gap-4">
         <a href="#about">About</a>
-        <a href="#skills">Skills</a>
-        <a href="#experience">Experience</a>
+        <!-- <a href="#skills">Skills</a> -->
+        <!-- <a href="#experience">Experience</a> -->
         <a href="#projects">Selected Projects</a>
         <a href="#contact">Contact</a>
       </nav>
